Wrap longer IDs. Fix #721.

--- a/app/assets/stylesheets/locals/catalog.css.scss
+++ b/app/assets/stylesheets/locals/catalog.css.scss
@@ -44,6 +44,7 @@
 
 		dd {
 			margin:0 0 .75em;
+                        word-wrap: break-word;
 		}
 
 
